tests/negative/gold/clashing_field2_test.gold
tests/negative/clashing_field2_test.toit:7:3: error: Redefinition of 'foo'
  foo:
  ^~~
tests/negative/clashing_field2_test.toit:6:3: note: First definition of 'foo'
  foo := 1
  ^~~
tests/negative/clashing_field2_test.toit:9:3: error: Redefinition of 'foo'
  foo= x:
  ^~~~
tests/negative/clashing_field2_test.toit:6:3: note: First definition of 'foo'
  foo := 1
  ^~~
Compilation failed.
